<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string
		name="app_name">Mobile Vikings for Android</string>
	<string
		name="credit">Credit</string>
	<string
		name="usage">Usage</string>
	<string
		name="topups">Top-ups</string>
	<string
		name="settings">Settings</string>
	<string
		name="about">About</string>
	<string
		name="credentials">Credentials</string>
	<string
		name="username">Username</string>
	<string
		name="password">Password</string>
	<string
		name="auto_update">Auto Update</string>
	<string
		name="auto_update_frequency">Frequency</string>
	<string
		name="settings_frequency">Application will update every %s.</string>
	<string
		name="settings_auto_credit_enabled">Credit info will be automatically updated.</string>
	<string
		name="settings_auto_credit_disabled">Credit info will not be automatically updated.</string>
	<string
		name="settings_auto_usage_enabled">Usage info for the present day will be automatically updated.</string>
	<string
		name="settings_auto_usage_disabled">Usage info for the present day will not be automatically updated.</string>
	<string
		name="settings_auto_topups_enabled">Top-up info will be automatically updated.</string>
	<string
		name="settings_auto_topups_disabled">Top-up info will not be automatically updated.</string>
	<string
		name="select_msisdn">Select number</string>
	<string
		name="settings_select_msisdn">Number %s will be used.</string>
	<string
		name="widget_action">Widget tap action</string>
	<string
		name="settings_widget_action">%s when the widget is tapped.</string>
	<string
		name="update">Update</string>
	<string
		name="remaining">%s remaining</string>
	<string
		name="megabytes_remaining">%s MB remaining</string>
	<string
		name="sms_remaining">%s SMSs remaining</string>
	<string
		name="sms_son_remaining">%s SMSs to Mobile Vikings remaining</string>
	<string
		name="valid_until">Valid until %s</string>
	<string
		name="at_hour">at</string>
	<string
		name="price_plan">Plan: %s</string>
	<string
		name="megabytes">%s MB</string>
	<string
		name="kilobytes">%s KB</string>
	<string
		name="login_title">Login to Mobile Vikings</string>
	<string
		name="exception_message">Could not connect. Make sure your internet connection is working and your credentials are correct. [error: %s]
	</string>

</resources>
